--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta name="google-site-verification" content="Ucx8nE-n57BtDWxpOCghHUSFNJXA7-3QXQcMEyyWKIs" />
 
-	<title>PFP PALESTINE</title>
+	<title>TWIBBON K3</title>
 
-	<meta property="og:title" content="PFP Palestine" />
-	<meta property="og:image" content="https://savegazza.netlify.app/img/og.png"/>
-	<meta name="author" content="Ferry Ayunda" />
+	<meta property="og:title" content="Twibbon K3" />
+	<meta property="og:image" content="https://twibbonk3.netlify.app/img/og.png"/>
+	<meta name="author" content="Aidul Candra" />
 	<meta property="og:locale" content="en_US" />
-	<meta name="description" content="Join the online revolution!." />
-	<meta property="og:description" content="Show support to Palestine by changing your profile picture." />
-	<link rel="canonical" href="https://savegazza.netlify.app/" />
+	<meta name="description" content="Yuk buat Twibbon K3 mu!." />
+	<meta property="og:description" content="Yuk buat Twibbon K3 mu!" />
+	<link rel="canonical" href="https://twibbonk3.netlify.app/" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
@@ -21,10 +21,10 @@
 	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-	<meta property="og:url" content="https://savegazza.netlify.app/" />
-	<meta property="og:site_name" content="PFP Palestine" />
+	<meta property="og:url" content="https://twibbonk3.netlify.app/" />
+	<meta property="og:site_name" content="Twibbon K3" />
 	<meta name="twitter:card" content="summary" />
-	<meta property="twitter:title" content="PFP Palestine" />
+	<meta property="twitter:title" content="Twibbon K3" />
 
 	<link rel='icon' type='image/png' href='/img/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
